add_executable(pf_vanilla pf_vanilla.cpp)
target_link_libraries(pf_vanilla PUBLIC example_config)
add_executable(pf_unscented pf_unscented.cpp)
target_link_libraries(pf_unscented PUBLIC example_config)
add_executable(pf_extended pf_extended.cpp)
target_link_libraries(pf_extended PUBLIC example_config)
